styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
}
:target:before {
  content: "";
  display: block;
  height: 85px;
  margin: -85px 0 0;
}

body {
  @apply bg-primary-100 font-primary transition-colors contrast-more:bg-primary-50 dark:bg-primary-800 dark:contrast-more:bg-[rgb(18,15,13)];
}
a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}
:root {
  --tw-color-primary-50: 249 250 251;
  --tw-color-primary-100: 243 244 246;
  --tw-color-primary-200: 229 231 235;
  --tw-color-primary-300: 209 213 219;
  --tw-color-primary-400: 156 165 178;
  --tw-color-primary-500: 107 113 122;
  --tw-color-primary-600: 86 91 98;
  --tw-color-primary-700: 52 56 60;
  --tw-color-primary-800: 39 41 43;
  --tw-color-primary-900: 17 18 19;
  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f9fafb */
  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #f3f4f6 */
  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #e5e7eb */
  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #d1d5db */
  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #9ca5b2 */
  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #6b717a */
  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #565b62 */
  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #34383c */
  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #27292b */
  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #111213 */
}

@layer base {
  @font-face {
    font-family: "Inter";
    font-style: normal;
    font-weight: 100 900;
    font-display: optional;
    src: url("/fonts/inter-var-latin.woff2") format("woff2");
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
      U+2215, U+FEFF, U+FFFD;
  }
  @font-face {
    font-family: "Nunito";
    font-style: normal;
    font-weight: 100 900;
    font-display: optional;
    src: url("/fonts/nunito-latin.woff2") format("woff2");
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
      U+2215, U+FEFF, U+FFFD;
  }
}
@layer components {
  .tap-highlight-none {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    -webkit-tap-highlight-color: transparent;
  }
  .code-highlight {
    @apply whitespace-nowrap rounded border border-primary-400/30 bg-primary-500/5 px-0.5 font-mono;
  }
  .touch-opacity-0 {
    opacity: 1;
  }
  .focus-ring {
    @apply focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-500 focus-visible:ring-offset-2 dark:focus-visible:ring-offset-primary-600;
  }
  .contrast-ring {
    @apply outline-none ring-1 ring-primary-800 ring-offset-1 dark:ring-offset-primary-200;
  }
  .contrast-bg {
    @apply contrast-more:contrast-ring outline-none contrast-more:bg-amber-300 dark:contrast-more:!bg-amber-400 dark:contrast-more:text-black;
  }
  .contrast-text {
    @apply contrast-more:!text-primary-900 dark:contrast-more:!text-primary-900;
  }
  @media (hover) {
    .touch-opacity-0 {
      opacity: 0;
    }
  }
}
/* ... */

